--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
